--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                 <div class="col-md-6">
                     <img class="responsive" src="assets/247947877_10161711501684453_1600459696474411427_n.jpg"/>
                 </div>
-                <div class="col-md-6"></div>
+                <div class="col-md-6">
+                    <div class="campaign-slogan">
+                        <p>Atty. Sonny Matula</p>
+                        <p>Defender ng Mangggawa para sa Senado</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -36,7 +41,7 @@
         <div class="section-3">
             <div class="row">
                 <div class="col-md-3">
-                    <p class="italize">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English"</p>
+                    <p class="italize">Regular na trabaho</p>
                 </div>
                 <div class="col-md-3">
                     <p class="italize">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English"</p>
@@ -63,6 +68,9 @@
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+        <!-- Jquery -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
