--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <!-- Slick CSS-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+        <!-- Slick Theme CSS-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -36,21 +43,31 @@
 
         <div class="section-2">
             <h2>MGA PLATAPORMA</h2>
+            <div class="arrow-down"></div>
         </div>
 
         <div class="section-3">
-            <div class="row">
-                <div class="col-md-3">
-                    <p class="italize">Regular na trabaho</p>
+            <div class="responsive">
+                <div>
+                    <p>Regular na trabaho</p>
                 </div>
-                <div class="col-md-3">
-                    <p class="italize">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English"</p>
+                <div>
+                    <p>Pantay-pantay na sahod sa buong Pilipinas</p>
                 </div>
-                <div class="col-md-3">
-                    <p class="italize">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English"</p>
+                <div>
+                    <p>Kapakanan ng manggagawa at magsasaka</p>
                 </div>
-                <div class="col-md-3">
-                    <p class="italize">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English"</p>
+                <div>
+                    <p>Security of tenure para sa manggagawa</p>
+                </div>
+                <div>
+                    <p>Tuldukan ang ENDO sa regular na trabaho</p>
+                </div>
+                <div>
+                    <p>Comprehensive unemployment insurance (kasama ang OFW)</p>
+                </div>
+                <div>
+                    <p>Food Security</p>
                 </div>
             </div>
         </div>
@@ -71,6 +88,10 @@
 
         <!-- Jquery -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        
+        <!-- Slick -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
