--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p>Kapakanan ng manggagawa at magsasaka</p>
                 </div>
                 <div>
-                    <p>Security of tenure para sa manggagawa</p>
+                    <p class="tenure">Security of tenure para sa manggagawa</p>
                 </div>
                 <div>
                     <p>Tuldukan ang ENDO sa regular na trabaho</p>
