--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Atty. Sonny Matula</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <img class="img-fluid site-logo" src="assets/4x2andHalf inches stickerBarandNoLOGO.png" />
             </div>
         </nav>
 
         <div class="section-1">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="responsive" src="assets/247947877_10161711501684453_1600459696474411427_n.jpg"/>
+                    <img class="responsive" src="assets/Senator Sonny Matula.png"/>
                 </div>
                 <div class="col-md-6">
                     <div class="campaign-slogan">
