--- a/index.html
+++ b/index.html
@@ -22,15 +22,28 @@
         <!-- Slick Theme CSS-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <img class="img-fluid site-logo" src="assets/4x2andHalf inches stickerBarandNoLOGO.png" />
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Kilalanin si Atty. Sonny</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Mga Plataporma</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Mga Balita</a>
+                    </li>
+                </ul>
             </div>
         </nav>
-
+        
         <div class="section-1">
             <div class="row">
                 <div class="col-md-6">
@@ -38,53 +51,152 @@
                 </div>
                 <div class="col-md-6">
                     <div class="campaign-slogan">
-                        <p>Atty. Sonny Matula</p>
-                        <p>Defender ng Mangggawa para sa Senado</p>
+                        <p>DEFENDER NG</p>
+                        <p class="manggagawa">MANGGAGAWA</p>
+                        <p>PARA SA SENADO</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section-kilalanin">
+            <h2>KILALANIN SI <span class="color-pink">ATTY. SONNY MATULA</span></h2>
+            <div class="arrow-down"></div>
+        </div>
+
+        <div class="sonny-info">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>ATTY. JOSE SONNY MATULA is the National President of the Federation of Free Workers and the Chairperson of the Nagkaisa Labor Coalition, the biggest and broadest labor coalition in the country.</p>
+                        <a class="more">More >></a>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sonny-info-img-div">
+                            <img src="assets/smatula-info.jpg" class="img-fluid"/>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="section-2">
-            <h2>MGA PLATAPORMA</h2>
+            <h2>MGA <span class="color-pink">PLATAPORMA</span></h2>
             <div class="arrow-down"></div>
         </div>
 
         <div class="section-3">
-            <div class="responsive">
-                <div>
-                    <p>Regular na trabaho</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <ul>
+                        <li>Regular na trabaho</li>
+                        <li>Pantay-pantay na sahod sa buong Pilipinas</li>
+                        <li>Kapakanan ng manggagawa at magsasaka</li>
+                        <li>Security of tenure para sa manggagawa</li>
+                    </ul>
                 </div>
-                <div>
-                    <p>Pantay-pantay na sahod sa buong Pilipinas</p>
+                <div class="col-md-6">
+                    <ul>
+                        <li>Tuldukan ang ENDO sa regular na trabaho</li>
+                        <li>Comprehensive unemployment insurance (kasama ang OFW)</li>
+                        <li>Food Security</li>
+                    </ul>
                 </div>
-                <div>
-                    <p>Kapakanan ng manggagawa at magsasaka</p>
+            </div>
+        </div>
+
+        <div class="mga-balita-section">
+            <h2>MGA <span class="color-pink">BALITA</span></h2>
+            <div class="arrow-down"></div>
+        </div>
+
+        <div class="mga-balita-videos">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/j5GgGTSD7jw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Robredo names Sonny Matula as 12th senatorial aspirant under her slate</p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/GK769yJBndg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>VP Leni’s Criteria for the 12th member of her Senate Slate</p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/fiGHYRYEttY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Sonny Matula is 12th Member of Robredo’s Senate Slate – Rappler</p>
+                    </div>
                 </div>
-                <div>
-                    <p class="tenure">Security of tenure para sa manggagawa</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/1I-N2NsV3k4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Acceptance of VP Leni’s Proclamation of Atty Matula as the 12th Senatorial Candidate</p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/kXTGY3ruMKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Alliance of Labor Leaders for Leni</p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/zo2M8inVXwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Atty. Matula on Political Dynasties</p>
+                    </div>
                 </div>
-                <div>
-                    <p>Tuldukan ang ENDO sa regular na trabaho</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/BLWAsLOeXT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Thank you Volunteers of Leni and Kiko</p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/uxdPy679dTc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Atty Matula’s Message to the Riders </p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/GReOvqFxC60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Itanong Mo Kay Atty. Matula: Work from Home ba Kayo?</p>
+                    </div>
                 </div>
-                <div>
-                    <p>Comprehensive unemployment insurance (kasama ang OFW)</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/TbmRrIL-lGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>We Need to Speak with One Voice Against Human Rights Violations</p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/Uhvf_7NuBPM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>The Church and the Workers</p>
+                    </div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/OrJ3z2eAOHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>May Karapatan Bang Hindi Pumasok sa Panahon ng Pandemic?</p>
+                    </div>
                 </div>
-                <div>
-                    <p>Food Security</p>
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <iframe src="https://www.youtube.com/embed/yZ11tRWtPZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Call to Peace</p>
+                    </div>
+                    <div class="col-md-4"></div>
                 </div>
             </div>
         </div>
 
         <div class="section-4">
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
-                    <p>VOTE ATTY. SONNY MATULA FOR SENATOR</p>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-           
+            <h2>IBOTO <span class="color-pink">ATTY. SONNY MATULA</span> PARA SA SENADO</h2>
+            <div class="arrow-down"></div>
+        </div>
+
+        <div class="social-media">
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/SonnyGMatula/" target="_blank">
+                        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://youtube.com/channel/UCs9af34o3C_9bxWIVfESEFw">
+                        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
 
         <!-- Bootstrap core JS-->
