--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <!-- <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <img class="img-fluid site-logo" src="assets/4x2andHalf inches stickerBarandNoLOGO.png" />
                 <ul class="navbar-nav mr-auto">
@@ -41,6 +41,21 @@
                         <a class="nav-link" href="#">Mga Balita</a>
                     </li>
                 </ul>
+            </div>
+        </nav> -->
+
+        <!-- Responsive navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+            <div class="container">
+                <img class="img-fluid site-logo" src="assets/4x2andHalf inches stickerBarandNoLOGO.png" />
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Kilalanin si Atty. Sonny</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Mga Plataporma</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Mga Balita</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
         
