--- a/index.html
+++ b/index.html
@@ -27,33 +27,19 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <!-- <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-                <img class="img-fluid site-logo" src="assets/4x2andHalf inches stickerBarandNoLOGO.png" />
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Kilalanin si Atty. Sonny</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Mga Plataporma</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Mga Balita</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
-
-        <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-light">
             <div class="container">
                 <img class="img-fluid site-logo" src="assets/4x2andHalf inches stickerBarandNoLOGO.png" />
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span>
+                        <i class="fa fa-bars" style="color:#333; font-size:28px;"></i>
+                    </span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Kilalanin si Atty. Sonny</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Mga Plataporma</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Mga Balita</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#section-kilalanin">Kilalanin si Atty. Sonny</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#section-2">Mga Plataporma</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#mga-balita-section">Mga Balita</a></li>
                     </ul>
                 </div>
             </div>
@@ -74,17 +60,17 @@
             </div>
         </div>
 
-        <div class="section-kilalanin">
+        <div class="section-kilalanin" id="section-kilalanin">
             <h2>KILALANIN SI <span class="color-pink">ATTY. SONNY MATULA</span></h2>
             <div class="arrow-down"></div>
         </div>
 
-        <div class="sonny-info">
+        <div class="sonny-info" id="sonny-info">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
                         <p>ATTY. JOSE SONNY MATULA is the National President of the Federation of Free Workers and the Chairperson of the Nagkaisa Labor Coalition, the biggest and broadest labor coalition in the country.</p>
-                        <a class="more">More >></a>
+                        <a class="more" target="" href="about.html">More >></a>
                     </div>
                     <div class="col-md-6">
                         <div class="sonny-info-img-div">
@@ -95,7 +81,7 @@
             </div>
         </div>
 
-        <div class="section-2">
+        <div class="section-2" id="section-2">
             <h2>MGA <span class="color-pink">PLATAPORMA</span></h2>
             <div class="arrow-down"></div>
         </div>
@@ -120,7 +106,7 @@
             </div>
         </div>
 
-        <div class="mga-balita-section">
+        <div class="mga-balita-section" id="mga-balita-section">
             <h2>MGA <span class="color-pink">BALITA</span></h2>
             <div class="arrow-down"></div>
         </div>
