--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="campaign-slogan">
-                        <p>DEFENDER NG</p>
-                        <p class="manggagawa">MANGGAGAWA</p>
-                        <p>PARA SA SENADO</p>
+                        <p class="atty-matula-senado">Atty. Matula sa Senado</p>
+                        <p class="manggagawa">Defender ng Manggagawa</p>
                     </div>
                 </div>
             </div>
@@ -87,7 +86,7 @@
         </div>
 
         <div class="section-3">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-6">
                     <ul>
                         <li>Regular na trabaho</li>
@@ -102,6 +101,34 @@
                         <li>Comprehensive unemployment insurance (kasama ang OFW)</li>
                         <li>Food Security</li>
                     </ul>
+                </div>
+            </div> -->
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>1. ITAAS ANG SWELDO</h2>
+                    <p>Ibalik ang minimum wage na pambansa tungo sa living wage.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>2. DAGDAG BENEPISYO</h2>
+                    <p>Unemployment Insurance at Universal Health Care na mas malawak ang coverage; at dekalidad na serbisyo publiko.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>3. AYUDA AT TRABAHONG LIGTAS</h2>
+                    <p>10k kada buwan sa mga natanggal sa trabaho; wage subsidy sa mga no-work, no-pay.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>4. KARAPATAN NG PILIPINO</h2>
+                    <p>Improve workers' and human rights; Gawing ligtas para sa manggagawa at mamamayan ang bansa.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>5. WAKASAN NA ANG ENDO</h2>
+                    <p>Ipasa ang Security of Tenure Law.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>6. LAHAT, DISENTE ANG TRABAHO</h2>
+                    <p>Green Jobs at Climate Jobs upang mapangalagaan ang kalikasan; Trabaho sa loob ng bansa para s OFWs.</p>
                 </div>
             </div>
         </div>
